--- a/.github/workflows/blank2.yml
+++ b/.github/workflows/blank2.yml
@@ -35,7 +35,7 @@ jobs:
           sudo apt update
           yes 123456 | sudo passwd root
           sudo sed -i 's/^#PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config
-          sudo sshd &
+          sudo /usr/sbin/sshd -D &
           yes "" | sudo ssh-keygen
           sleep 60
           ssh -R 2222:localhost:22 nglocalhost.com
