--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,12 +20,12 @@ jobs:
           sudo apt install -y xfce4 xfce4-goodies xfce4-terminal tightvncserver novnc websockify curl
 
           # Configurar VNC sem senha
-          sudo mkdir -p ~/.vnc
-          echo "123456" | sudo vncpasswd -f > ~/.vnc/passwd
+          sudo mkdir -p /root/.vnc
+          echo "123456" | sudo vncpasswd -f > /root/.vnc/passwd
           sudo chmod 600 ~/.vnc/passwd
 
           # Inicia o VNC no display :1
-          sudo bash -c "echo "startxfce4" > ~/.vnc/xstartup; chmod +x ~/.vnc/xstartup"
+          sudo bash -c "echo "startxfce4" > /root/.vnc/xstartup; chmod +x /root/.vnc/xstartup"
           sudo vncserver :1
 
           # Instala ngrok
@@ -43,4 +43,4 @@ jobs:
           websockify --web /usr/share/novnc/ 5901 localhost:5901 &
 
           # Cria túnel ngrok para noVNC
-          ngrok http 5901 --log=stdout &
+          ngrok http 5901
